[package]
name = "constellation-observer"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["native-tls"]
native-tls = [ "tokio-tungstenite/tokio-native-tls","tokio-tungstenite/native-tls"]
rustls-tls = [ "tokio-tungstenite/tokio-rustls", "tokio-tungstenite/rustls"]

[dependencies]
tokio-tungstenite = { version = "0.15.0", features = ["tokio-native-tls", "native-tls"]} #, features = ["connect", "stream"], default-features = true }
constellation-shared= {git="https://github.com/PFC-Validator/constellation-shared.git", version ="0.2"}
tokio = { version = "1.10", features = ["full"] }
log = "0.4.14"
anyhow = "1.0"
futures = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
actix="0.12.0"
actix-rt="2.2.0"
actix-broker = "0.4.1"
chrono = "0.4.19"
rust_decimal="1.15.0"
rust_decimal_macros = "1.15.0"
terra-rust-api = {version ="1.0"}